test_regress/t/t_fuzz_triand_bad.out
%Error-UNSUPPORTED: t/t_fuzz_triand_bad.v:8:12: Unsupported: Member call on object 'VARREF 'g'' which is a 'BASICDTYPE 'logic''
                                              : ... note: In instance 't'
    8 |    tri g=g.and.g;
      |            ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Internal Error: t/t_fuzz_triand_bad.v:8:12: ../V3Width.cpp:#: Unlinked data type
                                                  : ... note: In instance 't'
    8 |    tri g=g.and.g;
      |            ^~~
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
